﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.11...]
### 2018-10-22
	Fixed: Foreground only option did not prevent the app from being changed back by normal rescans, ignoring the foreground only option.
### 2018-10-13
	Added: Network interfaces now have copy full information option in context menu, which includes IPv4&IPv6 address and some traffic data.
### 2018-10-12
	Fixed: Altered foreground monitoring to no longer leak tiny amount of memory whenever an app that has foreground rules enabled
		closes down while in the foreground (most cases of normally exiting said apps).
	Changed: Memory log (used for displaying logs in the UI) is no longer static. This should not have any visible changes to users.
	Removed: Properties.Settings, it just didn't provide anything useful.
	Changed: How settings are saved.
		This may be buggy, such as not all settings being saved, this is mostly caused by uncertainty on how SharpConfig works.
### 2018-10-11
	Added: Option to mute network error logging (Configuration > Logging > Show network errors).
		This can get really spammy on certain networks without this option.
	Changed: Network errors are now immediately shown and they will stop showing after 5 consecutive reports.
### 2018-10-10
	Fixed: Errors that output stacktraces cause only 1 fatal error instead of 3.
	Added: Self-maintenance to run garbage collector once a day at midnight.
### 2018-09-19
	Fixed: Some internal locking. Should behave better in corner cases.
	Fixed: Exit behaviour. Should be more consistent.
	Fixed: Admin elevation from command-line arguments should be more reliable and not cause TM to just vanish on occasion.
### 2018-09-08
	Fixed: Potential permanent resource leakage related to static event handlers.
	Changed: IP changes are now in Info logging level instead of Debug.