@@ -3,6 +3,10 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.11...]
+### 2018-10-31
+	Fixed: Crash on last day of a month
+	Fixed: Setting affinity strategy to ignored from force or limit in UI is now respected.
+	Fixed: Watchlist formatting is now uniform whether you just started TM or modified a rule.
 ### 2018-10-22
 	Fixed: Foreground only option did not prevent the app from being changed back by normal rescans, ignoring the foreground only option.
 ### 2018-10-13
